test-expected/large/qkbmanagement/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: qkbadminsvc
    foo.com/duversion: 2.4.86-20190924.1569376632890
    foo.com/version: 2.4.86
  labels:
    app.kubernetes.io/name: qkbmanagement
    helm.sh/chart: qkbmanagement-2.4.86
  name: qkbmanagement
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: qkbmanagement
  type: ClusterIP
